# const-arithmetic-rs

./: CHANGELOG.md  Cargo.toml  README.md
src/: lib.rs
