[package]
name = "literal-arithmetic"
version = "0.1.0"
edition = "2021"
authors = [ "Lut99" ]
repository = "https://github.com/Lut99/const-arithmetic-rs"
description = "Implements procedural macro for doing math on integer literals for use in Rust macros."


[lib]
proc-macro = true


[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }


[features]
default = []
